# stream-scan

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: basic_scan.py
src/stream_scan/: models.py  scanner.py
src/stream_scan/analyzers/: __init__.py  injection_analyzer.py  keyword_analyzer.py  readability_analyzer.py  toxicity_analyzer.py
tests/: test_analyzers.py  test_scanner.py
