[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-scan"
version = "0.1.0"
description = "A real-time scanner for LLM prompts to detect and mitigate potential risks."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-api-python-client",
]

[project.urls]
"Homepage" = "https://github.com/your-username/stream-scan"
"Bug Tracker" = "https://github.com/your-username/stream-scan/issues"